[package]
name = "filterust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
conv = "0.3.3"
matrixcompare = { version = "0.3.0", features = [ "proptest-support" ]}
nalgebra = { version = "0.29.0", features = ["std", "alloc", "proptest-support", "compare"]}
# nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev", features = ["std", "alloc", "proptest-support", "compare"]}
# nalgebra = { path = "../nalgebra", features = ["std", "alloc", "proptest-support", "compare"]}
ndarray-linalg = "0.14.1"
ndarray-stats = "0.5.0"
proptest = "1.0.0"

ndarray = { version = "0.15.3 ", features = ["blas", "std", "approx"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }